--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,7 +6,11 @@
     height: auto;
     /* margin: 0 0 0 40px; */
     border-radius: 20px;
-    margin: 30px 0 0 25px;
+    margin: 30px 0 0.3px 25px;
+
+    -webkit-box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
 }
 
 .fontIcon {
@@ -21,6 +25,10 @@
     border-radius: 50px !important;
     margin: 30px 5.6vw;
     float: right;
+
+    -webkit-box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
+box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
 }
 
 .dropdown-item {
@@ -69,6 +77,7 @@
 .signUpLink {
     padding-top: 20px;
 }
+
 .donateBanner button {
     background-color: #e7fafe;
     border-radius: 10px;
@@ -82,6 +91,21 @@
     -webkit-box-shadow: 0px 5px 0px 0px rgba(137,197,209,1);
     -moz-box-shadow: 0px 5px 0px 0px rgba(137,197,209,1);
     box-shadow: 0px 5px 0px 0px rgba(137,197,209,1);
+}
+
+.donateBanner button:hover {
+    background-color: #758285;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 25px;
+    padding: 20px 30px;
+    margin: -19px 0 0 -40px;
+
+    -webkit-box-shadow: 0px 5px 0px 0px rgb(235, 235, 235);
+    -moz-box-shadow: 0px 5px 0px 0px rgb(235, 235, 235);
+    box-shadow: 0px 5px 0px 0px rgb(235, 235, 235);
 }
 
 .donateBanner p {
@@ -98,3 +122,25 @@
     background-color: rgb(238, 238, 238);
     height: 97.4vh;
 }
+
+.bg-img {
+    background-image: url('../images/homestead.jpg');
+}
+
+.loginLogo {
+    width: 300px;
+    margin: 0 0 30px 35px;
+}
+.card {
+    height: 450px;
+    width: 400px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    -webkit-box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+    -moz-box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+    box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+    border-radius: 10px;
+  }
