--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,6 +49,13 @@ box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
     justify-content: space-evenly;
 }
 
+.ua-navLinks {
+    display: flex;
+    font-family: 'Raleway';
+    padding: 60px 0 0 0;
+    justify-content: space-evenly;
+}
+
 .navLinkItem {
     color: rgb(75, 74, 74);
     font-size: 18px;
@@ -131,11 +138,30 @@ box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
     width: 300px;
     margin: 0 0 30px 35px;
 }
+
+.login-bg {
+    position: absolute;
+    width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+.loginBtnDiv {
+    text-align: center;
+}
+
+.loginBtn {
+    margin-top: 10px;
+    background-color: #536d48 !important;
+}
+
 .card {
     height: 450px;
     width: 400px;
     position: fixed;
-    top: 50%;
+    top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
@@ -144,3 +170,34 @@ box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
     border-radius: 10px;
   }
+
+  .ua-dashboardContainer {
+    height: 100vh;
+    width: 100vw;
+    background-color: #025289;
+}
+
+.ua-container {
+    -webkit-box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+    -moz-box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+    box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.67);
+}
+
+.ua-dashboardTitle {
+    margin: 20px 0 20px 30px;
+    color: white;
+}
+
+.ua-dataDashboard {
+    background-color: white;
+    height: 100vh;
+}
+
+.ua-pillMenu {
+    text-align: center;
+}
+
+.ua-pillMenu .ua-button {
+    margin-top: 50px;
+    font-size: 30px;
+}
