--- a/public/css/app.css
+++ b/public/css/app.css
@@ -294,3 +294,38 @@ box-shadow: 0px 9px 12px 1px rgba(0,0,0,0.75);
     background-color: #ccffb6;
     color: black;
 }
+
+.modal-div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-header {
+    background-color: #025289;
+    color: white;
+    font-family: 'Raleway';
+    font-weight: 700;
+}
+
+.modal-detail {
+    height: 520px;
+    width: 100%;
+    background-color: white;
+    border-radius: 20px;
+    z-index: 0;
+}
+
+.modal-contactInfo {
+    padding: 20px 35px 0 35px;
+    font-family: 'Raleway';
+    font-weight: 700;
+}
+
+.close span{
+    color: white;
+}
